--- a/public/back/second.html
+++ b/public/back/second.html
@@ -58,14 +58,9 @@
       <!-- 面包屑导航, 路径导航 -->
       <ol class="breadcrumb">
         <li><a href="#">管理系统</a></li>
-        <li class="active">首页</li>
+        <li class="active">分类管理</li>
+        <li class="active">二级分类</li>
       </ol>
-
-      <div class="lt_content">
-        <!-- 准备两个具备宽高的容器 -->
-        <div class="echarts_1 pull-left"></div>
-        <div class="echarts_2 pull-right"></div>
-      </div>
     </div>
   </div>
 
@@ -96,9 +91,7 @@
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
-  <script src="./lib/echarts/echarts.min.js"></script>
   <script src="./js/common.js"></script>
-  <script src="./js/index.js"></script>
   <script src="./js/login.js"></script>
 
 </body>
