--- a/public/back/second.html
+++ b/public/back/second.html
@@ -37,7 +37,7 @@
             <span>分类管理</span></a>
           <div class="child" style="display: none">
             <a href="first.html">一级分类</a>
-            <a href="second.html">二级分类</a>
+            <a href="second.html" class="current">二级分类</a>
           </div>
         </li>
         <li><a href="product.html"><i class="glyphicon glyphicon-tags"></i>
