--- a/public/back/user.html
+++ b/public/back/user.html
@@ -27,7 +27,7 @@
     <div class="nav">
       <ul>
         <li>
-          <a href="user.html">
+          <a href="user.html" class="current">
             <i class="glyphicon glyphicon-user"></i>
             <span>用户管理</span>
           </a>
@@ -60,6 +60,34 @@
         <li><a href="#">管理系统</a></li>
         <li class="active">用户管理</li>
       </ol>
+
+      <!-- 表格 -->
+      <div class="lt_content">
+        <table class="table table-bordered table-hover">
+          <thead>
+            <tr>            
+              <th width="10%">序号</th>
+              <th width="20%">用户名</th>
+              <th width="30%">手机号</th>
+              <th width="20%">状态</th>
+              <th width="20%">操作</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- 挖个坑 -->
+          </tbody>
+        </table>
+
+        <!-- 分页插件bootstrap-paginator 的使用:
+            1. 引包
+            2. 页面结构, bootstrap分页插件如果是3.0版本,要求这个盒子必须是ul 
+            3. 初始化分页插件
+        -->
+        <!-- class="text-right"  相当于右浮 -->
+        <div class="text-right">
+          <ul id="paginator"></ul>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -86,12 +114,61 @@
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
+  <!-- 启用禁用功能模态框 -->
+  <div class="modal fade" tabindex="-1" id="userModal">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+            <h4 class="modal-title">温馨提示</h4>
+          </div>
+          <div class="modal-body">
+            <p class="red"><i class="glyphicon glyphicon-info-sign"></i>你确定要执行此操作吗？</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-primary" id="submitBtn">确认</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+  <!-- 模板引擎使用:
+      1. 引包: template-web.js
+      2. 准备模板
+      3. 准备数据
+      4. 将模板与数据相结合, 进行页面渲染
+  -->
+  <script type="text/html" id="tpl">
+    {{ each rows v i }}
+      <tr>
+          <td>{{ i+1 + (page-1) * size }}</td>
+          <td>{{ v.username }}</td>
+          <td>{{ v.mobile }}</td>
+          <td>{{ v.isDelete === 1 ? "正常" : "禁用" }}</td>
+          <!-- v.isDelete 为0 表示禁用, 1 表示启用 -->
+          <!-- <td><button class="btn btn-danger">禁用</button></td> -->
+          <td data-id="{{ v.id }}">
+              {{ if v.isDelete === 1}}
+              <button class="btn btn-danger">禁用</button>
+              {{ /if }}
+              {{ if v.isDelete === 0}}
+              <button class="btn btn-success">启用</button>
+              {{ /if }}
+          </td>
+
+      </tr>
+    {{ /each }}
+  </script>
+
   <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
+  <script src="./lib/artTemplate/template-web.js"></script>
+  <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
   <script src="./js/common.js"></script>
-  <script src="./js/login.js"></script>
+  <script src="./js/user.js"></script>
 
 </body>
 </html>
