二级基本功能完成

--- a/public/back/second.html
+++ b/public/back/second.html
@@ -35,7 +35,7 @@
         <li>
           <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i>
             <span>分类管理</span></a>
-          <div class="child" style="display: none">
+          <div class="child">
             <a href="first.html">一级分类</a>
             <a href="second.html" class="current">二级分类</a>
           </div>
@@ -143,7 +143,7 @@
                   <label class="btn btn-default" for="fileupload">上传图片</label>
                   <!-- 指定 name 将来后台用于接收文件 -->
                   <!-- 指定 data-url ,指定后台接口地址 -->
-                  <input type="file" id="fileupload" name="pic1" data-url="/category/addSecondCategory" style="display: none;">
+                  <input type="file" id="fileupload" name="pic1" data-url="/category/addSecondCategoryPic" style="display: none;">
                 </div>
                 <div class="form-group" id="imgBox">
                   <img src="./images/none.png" width="100" alt="">
