--- a/public/back/first.html
+++ b/public/back/first.html
@@ -35,7 +35,7 @@
         <li>
           <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i>
             <span>分类管理</span></a>
-          <div class="child" style="display: none">
+          <div class="child">
             <a href="first.html" class="current">一级分类</a>
             <a href="second.html">二级分类</a>
           </div>
