--- a/public/back/product.html
+++ b/public/back/product.html
@@ -35,12 +35,12 @@
         <li>
           <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i>
             <span>分类管理</span></a>
-          <div class="child">
+          <div class="child" style="display: none;">
             <a href="first.html">一级分类</a>
-            <a href="second.html" class="current">二级分类</a>
+            <a href="second.html">二级分类</a>
           </div>
         </li>
-        <li><a href="product.html"><i class="glyphicon glyphicon-tags"></i>
+        <li><a href="product.html" class="current"><i class="glyphicon glyphicon-tags"></i>
           <span>商品管理</span></a></li>
       </ul>
     </div>
@@ -58,20 +58,22 @@
       <!-- 面包屑导航, 路径导航 -->
       <ol class="breadcrumb">
         <li><a href="#">管理系统</a></li>
-        <li class="active">分类管理</li>
-        <li class="active">二级分类</li>
+        <li class="active">商品管理</li>
       </ol>
 
       <div class="lt_content">
-        <button class="btn btn-default" id="addBtn">添加分类</button>
+        <button class="btn btn-default" id="addBtn">添加商品</button>
         <!-- 表格 -->
         <table class="table table-bordered table-hover mt_20">
           <thead>
             <tr>
               <th width="10%">序号</th>
-              <th width="30%">一级分类名称</th>
-              <th width="30%">二级分类名称</th>
-              <th width="30%">二级分类LOGO</th>
+              <th width="25%">商品名称</th>
+              <th width="25%">商品描述</th>
+              <th width="10%">商品库存</th>
+              <th width="10%">商品尺寸</th>
+              <th width="10%">商品状态</th>
+              <th width="10%">操作</th>
             </tr>
           </thead>
           <tbody>
@@ -111,7 +113,8 @@
   </div><!-- /.modal -->
 
 
-  <!-- 添加分类模态框 -->
+
+  <!-- 添加商品模态框 -->
   <div class="modal fade" tabindex="-1" id="addModal">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
@@ -160,23 +163,32 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
-  <script type="text/html" id="secondTpl">
+  <script type="text/html" id="productTpl">
     {{ each rows v i }}
       <tr>
         <td>{{ i+1 + (page-1) * size }}</td>
-        <td>{{ v.categoryName }}</td>
-        <td>{{ v.brandName }}</td>
-        <td><img height="50" src="{{ v.brandLogo }}" alt=""></td>
+        <td>{{ v.proName }}</td>
+        <td>{{ v.proDesc }}</td>
+        <td>{{ v.num }}</td>
+        <td>{{ v.size }}</td>
+        <td>{{ v.statu === 1 ? "已上架" : "已下架" }}</td>
+        <td>
+          {{ if v.statu === 1 }}
+            <button class="btn btn-danger">下架</button>
+          {{ else }}
+            <button class="btn btn-success">上架</button>          
+          {{ /if }}
+        </td>
       </tr>
     {{ /each }}
   </script>
 
   <!-- 这里遍历的是一级分类的内容, 所以 v.id 就相当于 categoryId -->
-  <script type="text/html" id="dropdownTpl">
+  <!-- <script type="text/html" id="dropdownTpl">
     {{ each rows v i }}
       <li><a href="#" data-id="{{ v.id }}">{{ v.categoryName }}</a></li>    
     {{ /each }}
-  </script>
+  </script> -->
 
   <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
