搜索页面基本功能完成

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -17,9 +17,9 @@
   <div class="lt_container">
     <!-- 乐淘头部 -->
     <div class="lt_header">
-      <a href="#" class="icon_left"><i class="fa fa-home"></i></a>
+      <a href="index.html" class="icon_left"><i class="fa fa-home"></i></a>
       <h3>乐淘云购</h3>
-      <a href="#" class="icon_right"><i class="fa fa-search"></i></a>
+      <a href="search.html" class="icon_right"><i class="fa fa-search"></i></a>
     </div>
 
     <!-- 乐淘主体 -->
