--- a/public/front/searchList.html
+++ b/public/front/searchList.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./lib/fa/css/font-awesome.min.css">
   <link rel="stylesheet" href="./lib/mui/css/mui.css">
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/search.css">
+  <link rel="stylesheet" href="./css/searchList.css">
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
@@ -18,7 +18,7 @@
     <!-- 乐淘头部 -->
     <div class="lt_header">
       <a href="javascript: history.go(-1)" class="icon_left"><i class="mui-icon mui-icon-back"></i></a>
-      <h3>搜索中心</h3>
+      <h3>商品列表</h3>
       <!-- <a href="#" class="icon_right"><i class="fa fa-search"></i></a> -->
     </div>
 
@@ -35,11 +35,19 @@
             <button class="mui-btn-primary search_btn">搜索</button>
           </div>
 
-          <!-- 历史记录 -->
-          <div class="lt_history">
-            <!-- 挖个大坑 -->
+          <!-- 排序模块 -->
+          <div class="lt_sort">
+            <a href="#">上架时间 <i class="fa fa-angle-down"></i></a>
+            <a href="#" data-type="price">价格 <i class="fa fa-angle-down"></i></a>
+            <a href="#" data-type="num">库存 <i class="fa fa-angle-down"></i></a>
+            <a href="#">折扣 <i class="fa fa-angle-down"></i></a>
           </div>
 
+          <!-- 产品模块 -->
+          <div class="lt_product">
+            <!-- 挖个坑 -->
+            <!-- <div class="loading"></div> -->
+          </div>
 
         </div>
       </div>
@@ -77,30 +85,29 @@
 
   </div>
 
-  <script type="text/html" id="searchTpl">
-    {{ if arr.length === 0 }}
-      <p>没有更多数据了</p>
-    {{ else }}
-      <div class="history_title">
-          <span class="mui-pull-left">搜索历史</span>
-          <span class="mui-pull-right btn_empty"><i class="fa fa-trash"></i> 清空记录</span>
-        </div>
-        <ul>
-          {{ each arr v i}}
-          <li>
-            <a href="searchList.html?key={{ v }}">{{ v }}</a>
-            <i class="mui-icon mui-icon-closeempty mui-pull-right btn_delete" data-index="{{ i }}"></i>
-          </li>
-          {{ /each }}
-        </ul>
-    {{ /if }}
-
+  <script type="text/html" id="listTpl">
+    <ul>
+      {{ each data v i }}
+        <li class="lt_product_item">
+          <a href="#">
+            <img src="{{ v.pic[0].picAddr }}" alt="">
+            <p class="info mui-ellipsis-2">{{ v.proName }}</p>
+            <p>
+              <span class="price">¥{{ v.price }}</span>
+              <span class="oldPrice">¥{{ v.oldPrice }}</span>
+            </p>
+            <button class="mui-btn mui-btn-primary">立即购买</button>
+          </a>
+        </li>
+      {{ /each }}
+    </ul>
+  
   </script>
 
   <script src="./lib/zepto/zepto.min.js"></script>
   <script src="./lib/mui/js/mui.js"></script>
   <script src="./lib/artTemplate/template-web.js"></script>
   <script src="./js/common.js"></script>
-  <script src="./js/search.js"></script>
+  <script src="./js/searchList2.js"></script>
 </body>
 </html>
