--- a/public/front2/login.html
+++ b/public/front2/login.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./lib/fa/css/font-awesome.min.css">
   <link rel="stylesheet" href="./lib/mui/css/mui.css">
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/searchList.css">
+  <link rel="stylesheet" href="./css/login.css">
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
@@ -22,36 +22,29 @@
   <div class="lt_header">
     <!-- 点击 a 标签, 返回上一页 javascript:history.go(-1); -->
     <a href="javascript:history.go(-1);" class="icon_left"><i class="mui-icon mui-icon-back"></i></a>
-    <h3>商品列表</h3>
+    <h3>登录</h3>
   </div>
 
   <!-- 乐淘主体 -->
   <div class="lt_main">
     <div class="mui-scroll-wrapper">
       <div class="mui-scroll">
+
         <!--这里放置真实显示的DOM内容-->
-
-        <!-- 搜索框 -->
-        <div class="lt_search">
-          <input type="text" placeholder="请输入搜索关键字" class="search_input">
-          <button class="mui-btn mui-btn-primary search_btn">搜索</button>
-        </div>
-
-        <!-- 排序模块 -->
-        <div class="lt_sort">
-          <a href="#" >上架时间 <i class="fa fa-angle-down"></i></a>
-          <a href="#" data-type="price">价格 <i class="fa fa-angle-down"></i></a>
-          <a href="#" data-type="num" >库存 <i class="fa fa-angle-down"></i></a>
-          <a href="#">折扣 <i class="fa fa-angle-down"></i></a>
-        </div>
-
-        <!-- 产品区域 -->
-        <div class="lt_product">
-          <!-- 挖了个坑 -->
-          <!--<div class="loading"></div>-->
-
-        </div>
-
+        <form class="mui-input-group">
+          <div class="mui-input-row">
+            <label>用户名</label>
+            <input type="text" id="username" class="mui-input-clear" placeholder="请输入用户名">
+          </div>
+          <div class="mui-input-row">
+            <label>密码</label>
+            <input type="password" id="password" class="mui-input-password" placeholder="请输入密码">
+          </div>
+          <div class="mui-button-row">
+            <button type="button" class="mui-btn mui-btn-primary" id="loginBtn" >登录</button>
+            <button type="reset" class="mui-btn mui-btn-danger" >重置</button>
+          </div>
+        </form>
 
       </div>
     </div>
@@ -63,29 +56,12 @@
       <li><a href="index.html"><i class="fa fa-home"></i><p>首页</p></a></li>
       <li><a href="category.html"><i class="fa fa-bars"></i><p>分类页</p></a></li>
       <li><a href="cart.html"><i class="fa fa-shopping-cart"></i><p>购物车</p></a></li>
-      <li><a href="user.html"><i class="fa fa-user"></i><p>用户中心</p></a></li>
+      <li><a href="user.html" class="current"><i class="fa fa-user"></i><p>用户中心</p></a></li>
     </ul>
   </div>
 </div>
 
 
-<script type="text/html" id="tpl">
-  <ul>
-    {{ each data v i }}
-    <li class="lt_product_item">
-      <a href="product.html?productId={{ v.id }}">
-        <img src="{{ v.pic[0].picAddr }}" alt="">
-        <p class="info mui-ellipsis-2">{{ v.proName }}</p>
-        <p>
-          <span class="price">¥{{ v.price }}</span>
-          <span class="oldPrice">¥{{ v.oldPrice }}</span>
-        </p>
-        <button class="mui-btn mui-btn-primary">立即购买</button>
-      </a>
-    </li>
-    {{ /each }}
-  </ul>
-</script>
 
 
 
@@ -94,6 +70,6 @@
 <script src="./lib/mui/js/mui.js"></script>
 <script src="./lib/artTemplate/template-web.js"></script>
 <script src="./js/common.js"></script>
-<script src="./js/searchList2.js"></script>
+<script src="./js/login.js"></script>
 </body>
 </html>
