--- a/public/front2/product.html
+++ b/public/front2/product.html
@@ -43,7 +43,7 @@
     <a href="cart.html" class="mui-pull-left">前往购物车</a>
 
     <div class="mui-pull-right">
-      <button class="mui-btn mui-btn-danger">加入购物车</button>
+      <button class="mui-btn mui-btn-danger" id="addCart">加入购物车</button>
       <button class="mui-btn mui-btn-warning">买买买</button>
     </div>
 
